Add template, and dao

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,11 +1,21 @@
-{
-  play.modules {
-    enabled += modules.MainModule
+encry {
+  postgres {
+    host = ""
+    username = ""
+    password = ""
   }
-  play.filters {
-    enabled += loggingSystem.LoggingFilter
-    hosts {
-      allowed = ["."]
-    }
+}
+
+play.modules {
+  enabled += modules.MainModule
+}
+play.filters {
+  enabled += loggingSystem.LoggingFilter
+  hosts {
+    allowed = ["."]
   }
+}
+play.assets {
+  path = "/public"
+  urlPrefix = "/assets"
 }
