akka remote ReceiverActor

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,3 +19,16 @@ play.assets {
   path = "/public"
   urlPrefix = "/assets"
 }
+
+akka {
+    actor {
+      provider = remote
+    }
+    remote {
+      enabled-transports = ["akka.remote.netty.tcp"]
+      netty.tcp {
+        hostname = "localhost"
+        port = 46619
+      }
+    }
+}
