Uncommited transactions - dao, web receiver inject

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,6 +8,7 @@ encry {
 
 play.modules {
   enabled += modules.MainModule
+  enabled += modules.ReceiverModule
 }
 play.filters {
   enabled += loggingSystem.LoggingFilter
