remove commited transactions logic

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,14 +22,17 @@ play.assets {
 }
 
 akka {
-    actor {
-      provider = remote
+  loglevel = "INFO"
+  actor {
+    provider = "akka.remote.RemoteActorRefProvider"
+  }
+  remote {
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+      port = 5150
     }
-    remote {
-      enabled-transports = ["akka.remote.netty.tcp"]
-      netty.tcp {
-        hostname = "localhost"
-        port = 46619
-      }
-    }
+    log-sent-messages = on
+    log-received-messages = on
+  }
 }
