--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,7 @@ encry {
 
 play.modules {
   enabled += modules.MainModule
-  enabled += modules.ReceiverModule
+  enabled += modules.ActorsBindModule
 }
 play.filters {
   enabled += loggingSystem.LoggingFilter
