add expired interval for unconfirmed transactions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,6 +4,10 @@ encry {
     username = ""
     password = ""
   }
+
+  cache {
+    unconfirmedTransactionExpiredInterval = 15m
+  }
 }
 
 play.modules {
