--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ play.modules {
   enabled += modules.ActorsBindModule
 }
 play.filters {
-  enabled += loggingSystem.LoggingFilter
+  enabled += logging.LoggingFilter
   hosts {
     allowed = ["."]
   }
