--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,6 +8,12 @@ encry {
   cache {
     unconfirmedTransactionExpiredInterval = 15m
   }
+
+  remote {
+    host = "127.0.0.1"
+    port = 5150
+  }
+
 }
 
 play.modules {
@@ -33,8 +39,8 @@ akka {
   remote {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
-      hostname = "127.0.0.1"
-      port = 5150
+      hostname = ${encry.remote.host}
+      port = ${encry.remote.port}
     }
     log-sent-messages = on
     log-received-messages = on
